--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Build
         uses: ./.github/actions/build
+        with:
+          docker-compose-test: ./docker-compose.yml
       - name: Validate tables
         uses: ./.github/actions/validate-tables
+        with:
+          table-names: ["source", "result", "table"]
