--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Build
-        uses: ./.github/actions/build
-        with:
-          docker-compose-test: ./docker-compose.yml
-          docker-build-command: docker build --tag deephaven-examples/app-mode-init-python .
+      #- name: Build
+      #  uses: ./.github/actions/build
+      #  with:
+      #    docker-compose-test: ./docker-compose.yml
+      #    docker-build-command: docker build --tag deephaven-examples/app-mode-init-python .
       - name: Validate tables
         uses: ./.github/actions/validate-tables
         with:
