--- a/.github/actions/validate-tables/action.yml
+++ b/.github/actions/validate-tables/action.yml
@@ -4,8 +4,13 @@ inputs:
   table-names:
     description: A string containing a space separated list of table names to check
     required: true
+  host:
+    description: The host name of the Deephaven instance
+    required: false
+    default: localhost
 runs:
   using: docker
   image: Dockerfile
   args:
     - ${{ inputs.table-names }}
+    - ${{ inputs.host }}
