testing localhost as host

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,4 +24,4 @@ jobs:
         uses: ./.github/actions/validate-tables
         with:
           table-names: "source result table"
-          host: "envoy"
+          host: "localhost"
