--- a/.github/actions/validate-tables/validate/docker-compose.yml
+++ b/.github/actions/validate-tables/validate/docker-compose.yml
@@ -3,3 +3,6 @@ version: "3.4"
 services:
   validate-tables:
     image: deephaven-examples/validate-tables:latest
+    environment:
+      - HOST="${HOST}"
+      - TABLE_NAMES="${TABLE_NAMES}"
