--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         uses: ./.github/actions/validate-tables
         with:
           table-names: "source result table"
-          host: "envoy"
+          host: "envoys"
           docker-compose-test: ./docker-compose.yml
           docker-build-command: docker build --tag deephaven-examples/app-mode-init-python .
           project-name: test-tables
