I give up, comma separated list now

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Validate tables
         uses: ./.github/actions/validate-tables
         with:
-          table-names: "source result"
+          table-names: "source,result"
           host: "envoy"
           docker-compose-test: ./docker-compose.yml
           docker-build-command: docker build --tag deephaven-examples/app-mode-init-python .
