array machine broke?

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,6 @@ jobs:
       - name: Validate tables
         uses: ./.github/actions/validate-tables
         with:
-          table-names:
-            - source
-            - result
+          table-names: [source, result]
           host: "envoy"
           project-name: test-tables
