renamed docker compose file parameter

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,12 @@ jobs:
       - name: Build
         uses: ./.github/actions/build
         with:
-          docker-compose-test: ./docker-compose.yml
+          project-file: ./docker-compose.yml
           docker-build-command: docker build --tag deephaven-examples/app-mode-init-python .
           project-name: test-tables
       - name: Validate tables
         uses: ./.github/actions/validate-tables
         with:
-          table-names: [source, result]
+          table-names: "source,result"
           host: "envoy"
           project-name: test-tables
