--- a/.github/actions/validate-tables/Dockerfile
+++ b/.github/actions/validate-tables/Dockerfile
@@ -1,8 +1,6 @@
 FROM docker/compose:alpine-1.29.2
 
-COPY entrypoint.sh /entrypoint.sh
+COPY --chmod=0xyz entrypoint.sh /entrypoint.sh
 COPY validate /github-actions-validate
-
-RUN ["chmod", "+x" ,"/entrypoint.sh"]
 
 ENTRYPOINT ["/entrypoint.sh"]
