--- a/.github/actions/validate-tables/Dockerfile
+++ b/.github/actions/validate-tables/Dockerfile
@@ -1,6 +1,8 @@
 FROM docker/compose:alpine-1.29.2
 
-COPY --chmod=0xyz entrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /entrypoint.sh
 COPY validate /github-actions-validate
+
+RUN ["chmod", "+x" ,"/entrypoint.sh"]
 
 ENTRYPOINT ["/entrypoint.sh"]
