--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
-        run: |
-           docker build --tag deephaven-examples/app-mode-init-python .
-           docker-compose -f docker-compose.yml -p  test-tables up -d
+        run: sh start.sh -d
       - name: Validate tables
         uses: deephaven/action-assert-dh-tables-present@v1
         with:
