--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
-        run: sh start.sh -d
+        run: docker-compose up -d
       - name: Validate tables
         uses: deephaven/action-assert-dh-tables-present@v1
         with:
