"fixed" the app mode library example

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.4"
 
 services:
   server:
-    image: ghcr.io/deephaven/server:${VERSION:-latest}
+    image: ghcr.io/deephaven/server:${VERSION:-edge}
     expose:
       - '8080'
     volumes:
@@ -12,7 +12,7 @@ services:
       - JAVA_TOOL_OPTIONS=-Xmx4g -Ddeephaven.console.type=python -Ddeephaven.application.dir=/data/app.d
 
   web:
-    image: ghcr.io/deephaven/web:${VERSION:-latest}
+    image: ghcr.io/deephaven/web:${VERSION:-edge}
     expose:
       - '80'
     volumes:
@@ -20,7 +20,7 @@ services:
       - web-tmp:/tmp
 
   grpc-proxy:
-    image: ghcr.io/deephaven/grpc-proxy:${VERSION:-latest}
+    image: ghcr.io/deephaven/grpc-proxy:${VERSION:-edge}
     environment:
       - BACKEND_ADDR=server:8080
     depends_on:
@@ -29,7 +29,7 @@ services:
       - '8080'
 
   envoy:
-    image: ghcr.io/deephaven/envoy:${VERSION:-latest}
+    image: ghcr.io/deephaven/envoy:${VERSION:-edge}
     depends_on:
       - web
       - grpc-proxy
